apps/web-mzima-client/src/app/settings/surveys/create-field-modal/create-field-modal.component.scss
@import 'helpers';

.fields-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -8px;
  justify-content: flex-start;
}

// HTML Button
.list-item1 {
  margin: 0 8px 16px;
  width: calc(50% - 16px);
  border: none;
  padding: 8px;
  font-size: 14px;
  line-height: 1.3;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: var(--color-neutral-90);
  background: var(--color-neutral-10);
  box-shadow: inset 0 0 0 1px var(--color-neutral-10);

  &--disabled {
    cursor: default;
    color: var(--color-neutral-60);

    h3 {
      color: inherit;
    }
  }
}

.list-item1 h3 {
  margin: 0 0 0.5rem 0;
  color: var(--color-black);
  font-size: 18px;
  text-align: left;
}

.list-item1 p {
  margin: 0;
  text-align: left;
}

// Mzima Button
.list-item2 {
  margin: 0 8px 16px;
  width: calc(50% - 16px);
  border: none;
  padding: 8px;
  font-size: 14px;
  line-height: 1.3;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: var(--color-neutral-90);
  background: var(--color-neutral-10);
  box-shadow: inset 0 0 0 1px var(--color-neutral-10);

  &--disabled {
    cursor: default;
    color: var(--color-neutral-60);

    h3 {
      color: inherit;
      text-align: left;
    }

    h3 {
      color: inherit;
      text-align: left;
    }
  }
}

.list-item2 h3 {
  margin: 0 0 0.5rem 0;
  color: var(--color-black);
  font-size: 18px;
  text-align: left;
}

.list-item2 p {
  margin: 0;
  text-align: left;
}

// Div clickable list items
.list-item {
  padding: 8px;
  cursor: pointer;
  border: none;
  font-size: 14px;
  line-height: 1.3;
  user-select: none;
  margin: 0 8px 16px;
  width: calc(50% - 16px);
  color: var(--color-neutral-90);
  background: var(--color-neutral-10);
  box-shadow: inset 0 0 0 1px var(--color-neutral-10);

  @include breakpoint-max($mobile) {
    width: calc(100% - 16px);
  }

  h3 {
    font-size: 16px;
    text-align: left;
    line-height: 1.5;
    margin-bottom: 4px;
    color: var(--color-black);
  }

  p {
    margin-bottom: 0;
    text-align: left;
  }

  &--disabled {
    cursor: default;
    color: var(--color-neutral-60);

    h3 {
      color: inherit;
    }
  }
}

.mat-slide-toggle {
  height: auto;
  display: block;

  &::ng-deep {
    .mat-slide-toggle {
      &-label {
        small {
          font-size: 12px;
          line-height: 1.4;
        }

        p {
          &:last-child {
            margin-bottom: 0;
          }
        }
      }

      &-bar {
        margin-top: 5px;
      }
    }
  }
}

quill-editor {
  width: 100%;
}

.spinner {
  display: block;
  margin-top: 60px;
}

.form-row {
  &__item {
    margin-bottom: 8px;
  }

  .form-head-panel {
    margin-bottom: 8px;
  }
}

